Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
network-manager-applet
network-manager-applet
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 40
    • Issues 40
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 3
    • Merge Requests 3
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • network-manager-appletnetwork-manager-applet
  • Issues
  • #64

Closed
Open
Opened Jun 15, 2019 by Pedro Côrte-Real@pedrocr

nm-applet segfaults when opening windows on Wayland

I'm running nm-applet with Waybar and sway on Wayland. There is a 100% reproducible crash when nm-applet opens a window like "Connection Information" or the wifi password entry. The issue goes away if nm-applet is forced to run under X11 with GDK_BACKEND=x11 nm-applet. The stack trace also includes a few x11 references so it seems related:

$ gdb nm-applet
GNU gdb (Ubuntu 8.2.91.20190405-0ubuntu3) 8.2.91.20190405-git
Copyright (C) 2019 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.
Type "show copying" and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
    <http://www.gnu.org/software/gdb/documentation/>.

For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from nm-applet...
(No debugging symbols found in nm-applet)
(gdb) run
Starting program: /usr/bin/nm-applet 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7ffff409a700 (LWP 13080)]
[New Thread 0x7ffff3899700 (LWP 13081)]
[New Thread 0x7ffff306c700 (LWP 13082)]
[New Thread 0x7ffff286b700 (LWP 13083)]
[New Thread 0x7ffff1ea3700 (LWP 13084)]

(nm-applet:13076): Gtk-WARNING **: 19:18:53.784: Can't set a parent on widget which has a parent
[Thread 0x7ffff1ea3700 (LWP 13084) exited]

(nm-applet:13076): Gtk-CRITICAL **: 19:18:55.232: gtk_widget_destroy: assertion 'GTK_IS_WIDGET (widget)' failed

(nm-applet:13076): Gtk-CRITICAL **: 19:18:55.232: gtk_widget_destroy: assertion 'GTK_IS_WIDGET (widget)' failed

(nm-applet:13076): Gtk-WARNING **: 19:18:55.245: Can't set a parent on widget which has a parent

(nm-applet:13076): Gtk-CRITICAL **: 19:18:55.255: gtk_widget_destroy: assertion 'GTK_IS_WIDGET (widget)' failed

(nm-applet:13076): Gtk-CRITICAL **: 19:18:55.255: gtk_widget_destroy: assertion 'GTK_IS_WIDGET (widget)' failed

(nm-applet:13076): Gtk-WARNING **: 19:18:55.266: Can't set a parent on widget which has a parent

Thread 1 "nm-applet" received signal SIGSEGV, Segmentation fault.
0x00007ffff68b468a in ?? () from /lib/x86_64-linux-gnu/libX11.so.6
(gdb) bt
#0  0x00007ffff68b468a in  () at /lib/x86_64-linux-gnu/libX11.so.6
#1  0x00007ffff68b4a3a in XInternAtom () at /lib/x86_64-linux-gnu/libX11.so.6
#2  0x00007ffff75586cc in gdk_x11_atom_to_xatom_for_display () at /lib/x86_64-linux-gnu/libgdk-3.so.0
#3  0x00007ffff756764d in gdk_x11_get_server_time () at /lib/x86_64-linux-gnu/libgdk-3.so.0
#4  0x0000555555571d86 in  ()
#5  0x00007ffff710ae8d in g_closure_invoke () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#6  0x00007ffff711e555 in  () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#7  0x00007ffff71274ae in g_signal_emit_valist () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#8  0x00007ffff7127b6f in g_signal_emit () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#9  0x00007ffff69f1ade in  () at /lib/x86_64-linux-gnu/libdbusmenu-gtk3.so.4
#10 0x00007ffff710ae8d in g_closure_invoke () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#11 0x00007ffff711e555 in  () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#12 0x00007ffff71274ae in g_signal_emit_valist () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#13 0x00007ffff7127b6f in g_signal_emit () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#14 0x00007ffff69d049a in dbusmenu_menuitem_handle_event () at /lib/x86_64-linux-gnu/libdbusmenu-glib.so.4
#15 0x00007ffff69d1937 in  () at /lib/x86_64-linux-gnu/libdbusmenu-glib.so.4
#16 0x00007ffff70253e3 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#17 0x00007ffff7024958 in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007ffff7024d48 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007ffff7024ddc in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007ffff72268bd in g_application_run () at /lib/x86_64-linux-gnu/libgio-2.0.so.0
#21 0x0000555555564b66 in  ()
#22 0x00007ffff6df0b6b in __libc_start_main (main=
    0x555555564a20, argc=1, argv=0x7fffffffe1a8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffffffe198) at ../csu/libc-start.c:308
#23 0x0000555555564c7a in  ()
(gdb) 

This is running on Ubuntu 19.04 with network-manager-gnome version 1.8.20-1ubuntu1. If you happen to know which debug symbol packages I need to install in Ubuntu to get a better stack trace let me know.

Edited Apr 07, 2020 by Pedro Côrte-Real
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/network-manager-applet#64