applet: drop a X11-ism

The time stamp from the X server is not better than GDK_CURRENT_TIME
anyway.

https://gitlab.gnome.org/GNOME/network-manager-applet/issues/64